Fixed broken layout for ID providers with long description (#316)

--- a/src/main/resources/assets/styles/wizard/id-provider-wizard-panel.less
+++ b/src/main/resources/assets/styles/wizard/id-provider-wizard-panel.less
@@ -6,11 +6,21 @@
 
       label {
         width: 120px;
+        display: inline-table;
       }
 
       .form-input {
-        margin-left: 0px;
+        margin-left: 0;
         flex-grow: 1;
+
+        &.application-configurator {
+          display: inline-grid;
+
+          .selected-options {
+            overflow: hidden;
+            width: 100%;
+          }
+        }
       }
     }
 
